@@ -3,8 +3,6 @@
 
 extern int Billint; // Billentyuzet interraptos!
 
-extern int Sajatugras; // Ha 1, akkor left->pozitiv forgas
-
 void inkremental(void);
 extern long Inkremens;
 
